# tradukejo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yaml  languages.json  manage.py  pyproject.toml  requirements.txt  requirements.txt.py
.devcontainer/: devcontainer.json
.docker/: Dockerfile  tradukejo.swarm.yaml
.github/workflows/: docker-image.yaml  test-django.yaml
config/: asgi.py  context_processor.py  local_settings.py.template  settings.py  urls.py  utils.py  wsgi.py
config/api/: settings.py  urls.py
core/mail/: utils.py
templates/: base.html  wide-page.html
tradukejo/: asgi.py  context_processor.py  local_settings.py.template  settings.py  urls.py  wsgi.py
tradukejo/api/: renderers.py  settings.py  urls.py
traduko/: admin.py  admin_views.py  ajax.py  apps.py  cpython_gettext.py  decorators.py  deepl.py  export_functions.py  forms.py  import_export_functions.py  import_functions.py  models.py  signals.py  translation_functions.py  urls.py  utils.py  views.py  vue_translation.py
traduko/api/: serializers.py  views.py
traduko/migrations/: 0001_initial.py  0002_auto_20201104_1349.py  0003_trstring_trstringtext.py  0004_languageversion.py  0005_auto_20201116_1101.py  0006_trstringtext_plural_index.py  0007_auto_20201118_1053.py  0008_auto_20201119_1050.py  0009_auto_20201119_1517.py  0010_auto_20201123_1321.py  0018_project_image.py  (+21 more)
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
vue-translation-interface/: README.md  package-lock.json  package.json  vue.config.js
(+308 files in other folders)
